config: update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,12 @@ coverage
 *.njsproj
 *.sln
 *.sw?
+
+#yarn
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
