--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "toastup",
   "private": true,
   "workspaces": [
-    "core"
+    "packages/*"
   ],
   "scripts": {
     "lint:scripts": "eslint ./packages --ext .ts,.tsx",
@@ -21,6 +21,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "husky": "^8.0.3",
     "lint-staged": "^15.2.0",
+    "postcss": "^8.4.33",
     "prettier": "^3.2.4",
     "stylelint": "^16.2.0",
     "stylelint-config-recommended": "^14.0.0",
@@ -28,5 +29,6 @@
     "stylelint-order": "^6.0.4",
     "stylelint-prettier": "^5.0.0",
     "typescript": "^5.3.3"
-  }
+  },
+  "packageManager": "yarn@4.2.2"
 }
