--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -21,12 +21,13 @@
   "scripts": {
     "dev": "vite --host",
     "build": "vite build && dts-bundle-generator --config ./dts-bundle-generator.config.ts",
-    "typings": "dts-bundle-generator --config ./dts-bundle-generator.config.ts && dts-bundle-generator --config ./dts-bundle-generator.config.ts -o ./dist/index.d.mts",
     "test": "vitest",
     "test:coverage": "vitest --coverage"
   },
+  "dependencies": {
+    "@toastup/core": "workspace:^0.0.4"
+  },
   "peerDependencies": {
-    "@toastup/core": "workspace:^0.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
