--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    // "composite": true,
+    "composite": true,
     "noEmit": true,
     "jsx": "react-jsx",
     "baseUrl": ".",
