--- a/.eslintrc
+++ b/.eslintrc
@@ -1,11 +1,14 @@
 {
   "root": true,
   "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint", "prettier"],
+  "plugins": ["@typescript-eslint", "react", "react-hooks", "prettier"],
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended",
+    "plugin:react/recommended",
+    "plugin:react-hooks/recommended",
+    "plugin:react/jsx-runtime",
     "prettier",
   ],
   "env": {
@@ -16,5 +19,11 @@
     "prettier/prettier": "error",
     "@typescript-eslint/no-empty-function": "off",
     "@typescript-eslint/no-namespace": "off",
+    "react/display-name": "off",
+  },
+  "settings": {
+    "react": {
+      "version": "detect",
+    },
   },
 }
