--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -21,9 +21,11 @@
     "@mdx-js/react": "^3.0.0",
     "clsx": "^2.0.0",
     "docusaurus-plugin-sass": "^0.2.5",
-    "prism-react-renderer": "^2.3.0",
+    "prism-react-renderer": "^2.3.1",
     "react": "^18.0.0",
+    "react-code-block": "^1.0.0",
     "react-dom": "^18.0.0",
+    "react-use": "^17.5.0",
     "rsuite": "^5.64.2",
     "sass": "^1.77.6"
   },
