--- a/packages/docs/tsconfig.json
+++ b/packages/docs/tsconfig.json
@@ -3,5 +3,6 @@
   "extends": "@docusaurus/tsconfig",
   "compilerOptions": {
     "baseUrl": "."
-  }
+  },
+  "include": ["src", "declaration.d.ts"]
 }
