--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@docusaurus/core": "3.4.0",
     "@docusaurus/preset-classic": "3.4.0",
+    "@easyops-cn/docusaurus-search-local": "^0.44.3",
     "@mdx-js/react": "^3.0.0",
     "animate.css": "^4.1.1",
     "clsx": "^2.0.0",
