--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -22,6 +22,15 @@
   "files": [
     "src"
   ],
+  "keywords": [
+    "react",
+    "toast",
+    "message",
+    "notification",
+    "alert",
+    "notification",
+    "toastup"
+  ],
   "scripts": {
     "dev": "vite --host",
     "build": "vite build && dts-bundle-generator --config ./dts-bundle-generator.config.ts",
@@ -47,5 +56,14 @@
     "vite": "^5.0.12",
     "vitest": "^1.2.1"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "author": "Kamil Bysiec <kamil.bysiec@agileplayers.com>",
+  "homepage": "https://toastup.kbysiec.com",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kbysiec/toastup.git"
+  },
+  "bugs": {
+    "url": "https://github.com/kbysiec/toastup/issues"
+  }
 }
