config(core): update package files in package.json

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -20,7 +20,8 @@
   },
   "types": "./dist/index.d.ts",
   "files": [
-    "src"
+    "src",
+    "./dist/index.d.ts"
   ],
   "keywords": [
     "react",
